--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta http-equiv="refresh" content="0;url=https://8d85fe65-06de-48a5-842f-8b60e862d03f-00-3qu4jyvd0oejx.picard.replit.dev/" / >
+<meta http-equiv="refresh" content="0;url=https://50e67dac-38f7-44e1-a33d-8b5846af1a79-00-3hhlm18ejr6uq.janeway.replit.dev/" / >
