--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta http-equiv="refresh" content="0;url=https://a097adf4-8e85-4f0a-a759-c1ea3cfd7ae4-00-13nv323ugjl56.janeway.replit.dev/" / >
+<meta http-equiv="refresh" content="0;url=https://8bbb6682-39fa-4c91-b834-ebdeb81372c8-00-3d47o89uhk3hi.kirk.replit.dev/" / >
